# eovot-benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
configs/: comparison_experiment.yaml  default.yaml  hardware_profiles.yaml  lasot_kcf.yaml  lasot_medianflow.yaml  siamfc_otb.yaml  synthetic_demo.yaml  tuning_example.yaml  vot_experiment.yaml
docs/: edge-efficiency-scoring.md  efficiency-metrics.md  got10k-evaluation-protocol.md  synthetic-dataset.md
eovot/: __init__.py  __main__.py
scripts/: __init__.py  advise_deployment.py  aggregate_results.py  analyze_attributes.py  analyze_complexity.py  analyze_difficulty.py  analyze_frame_skip.py  analyze_results.py  analyze_sequence_difficulty.py  analyze_tradeoffs.py  attribute_analysis.py  attribute_breakdown.py  compare_from_disk.py  compare_trackers.py  deployment_analysis.py  device_analysis.py  edge_deploy.py  error_budget_analysis.py  evaluate_protocol.py  export_predictions.py  export_results.py  full_evaluation.py  generate_html_report.py  generate_report.py  html_report.py  plot_results.py  rank_for_edge.py  rank_trackers.py  run_ablation.py  run_benchmark.py  run_experiment.py  run_frame_budget_sim.py  run_full_demo.py  run_grid_search.py  run_hparam_sweep.py  run_resolution_sweep.py  run_skip_sweep.py  run_sweep.py  score_trackers.py  select_tracker.py  (+4 more)
tests/: __init__.py  conftest.py  test_ablation.py  test_accuracy_integration.py  test_accuracy_metrics_integration.py  test_adaptive_kcf.py  test_adaptive_resolution_tracker.py  test_adaptive_skip.py  test_adaptive_tracker.py  test_cli.py  (+104 more)
(+212 files in other folders)
